syntax = "proto3";

package measure;
option go_package = "github.com/DrC0ns0le/net-perf/pkg/pb/measure;measure";

message PathLatencyRequest {
    repeated int32 path = 1;
    int32 count = 2;
    int32 interval = 3; // in ms
}

message PathLatencyResponse {
    int32 status = 1;
    int32 latency = 2;
}

service Measure {
    rpc PathLatency(PathLatencyRequest) returns (PathLatencyResponse) {};
}